test upload 0xC4m3l-jiang/blog_source@72fe4234220a6ca8debe716de471bc51236a87f4

--- a/p/testblog/index.html
+++ b/p/testblog/index.html
@@ -316,6 +316,16 @@
 	
 	
 ></p>
+<p><img src="/image-20250330152126079.png"
+	
+	
+	
+	loading="lazy"
+	
+		alt="image-20250330152126079"
+	
+	
+></p>
 
 </section>
 
