11 0xC4m3l-jiang/blog_source@a4813083621bd54bc4a3090d8e669e26897fceed

--- a/p/testblog/index.html
+++ b/p/testblog/index.html
@@ -326,6 +326,20 @@
 	
 	
 ></p>
+<p><img src="/p/testblog/image-20250330152411036.png"
+	width="1081"
+	height="532"
+	srcset="/p/testblog/image-20250330152411036_hu_ea69b6fd24b02923.png 480w, /p/testblog/image-20250330152411036_hu_b195dbdc91419650.png 1024w"
+	loading="lazy"
+	
+		alt="image-20250330152411036"
+	
+	
+		class="gallery-image" 
+		data-flex-grow="203"
+		data-flex-basis="487px"
+	
+></p>
 
 </section>
 
