上传图片 0xC4m3l-jiang/blog_source@c1c8f32c53bef545604fefe0c19d02e159b5248f

--- a/p/windows-内核开发-1/index.html
+++ b/p/windows-内核开发-1/index.html
@@ -388,8 +388,8 @@
 <li><strong>私有句柄表（private handle table）</strong> —— 用于管理进程执行对象的引用（事件、信号量、文件等）</li>
 <li><strong>一个或多个执行线程</strong> —— 常规用户模式进程在创建时默认包含一个线程（执行传统的main/WinMain函数）。不含线程的用户模式进程通常是无用的，在正常情况下会被内核销毁。</li>
 </ul>
-<p>书中提到的相关结构关系图：
-<img src="/image-20250403224717688.png"
+<p>书中提到的相关结构关系图：</p>
+<p><img src="/img/image-20250403224717688.png"
 	
 	
 	
@@ -436,7 +436,7 @@
 <li>通知CPU重试操作</li>
 </ol>
 <p>虚拟、物理地址映射如图：</p>
-<p><img src="/image-20250403231103991.png"
+<p><img src="/img/image-20250403231103991.png"
 	
 	
 	
@@ -526,7 +526,7 @@
 </li>
 </ul>
 <p>user process 和 System space 如图结构</p>
-<p><img src="/image-20250403235123204.png"
+<p><img src="/img/image-20250403235123204.png"
 	
 	
 	
@@ -563,7 +563,7 @@
 </li>
 </ul>
 <p>线程状态示意图：</p>
-<p><img src="/image-20250405195947162.png"
+<p><img src="/img/image-20250405195947162.png"
 	
 	
 	
@@ -626,7 +626,7 @@
 </li>
 <li>
 <p><strong>进程B</strong>：包含线程3（堆栈与其他进程隔离）。</p>
-<p><img src="/image-20250420140235262.png"
+<p><img src="/img/image-20250420140235262.png"
 	
 	
 	
@@ -735,7 +735,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="/image-20250420201127353.png"
+<p><img src="/img/image-20250420201127353.png"
 	
 	
 	
@@ -764,7 +764,7 @@
 </ul>
 <h2 id="general-system-architecture-系统架构">General System Architecture 系统架构
 </h2><p>系统架构图：</p>
-<p><img src="/image-20250420203107898.png"
+<p><img src="/img/image-20250420203107898.png"
 	
 	
 	
@@ -932,7 +932,7 @@
 <p><a class="link" href="https://learn.microsoft.com/zh-cn/sysinternals/downloads/winobj"  target="_blank" rel="noopener"
     >WinObj - Sysinternals | Microsoft Learn</a></p>
 <p>使用管理员打开</p>
-<p><img src="/image-20250422222305950.png"
+<p><img src="/img/image-20250422222305950.png"
 	
 	
 	
@@ -958,7 +958,7 @@
 	
 ></p>
 <p>进程句柄也可以使用 process explorer 进行查看。</p>
-<p><img src="/image-20250422223255629.png"
+<p><img src="/img/image-20250422223255629.png"
 	
 	
 	
